add wikipedia api error in documentation
